@@ -120,6 +120,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 19576) Moved id attribues from anchors accompanying section headers to
   the section headers themselves, removing the redundant anchor elements.
 * Removed name attribute from <a id="top"></a>.
+* Parser::setFunctionTagHook now can be used to add a new tag which is parsed at
+  preprocesor level.
 
 === Bug fixes in 1.16 ===
 
